otherStandard/objects/T1807_2__c.object
<CustomObject>
    <fields>
        <fullName>Ref1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ref1</label>
        <referenceTo>T1807_1__c</referenceTo>
        <relationshipLabel>T1807-2</relationshipLabel>
        <relationshipName>T1807_2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>