otherStandard/objects/T1807_2__c/fields/Auto1__c.field-meta.xml
<CustomField>
    <fullName>Auto1__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Auto1</label>
    <type>AutoNumber</type>
</CustomField>