otherStandard/objects/T1807_2__c/fields/CHKBOX1__c.field-meta.xml
<CustomField>
    <fullName>CHKBOX1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>updeeate2</description>
    <label>CHKBOX1</label>
    <type>Checkbox</type>
</CustomField>