otherStandard/objects/T1807_2__c/fields/Formula1__c.field-meta.xml
<CustomField>
    <fullName>Formula1__c</fullName>
    <description>updated
    @newline
    &apos;quotes&apos;</description>
    <externalId>true</externalId>
    <formula>2 &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula1</label>
    <type>Checkbox</type>
</CustomField>